<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ClassicLinearV">
    <!--！！！未改-->
    <com.bsoft.mob.ienr.view.BsoftActionBar
        android:id="@+id/actionbar"
        style="@style/ClassicActionBar" />

    <ImageView
        android:id="@+id/taimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tazhoukantext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="18dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tazhoukanversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        style="@style/ClassicTextSecondary" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_bsoft"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        style="@style/ClassicTextSecondary"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login_copyright_zh" />

    <TextView
        android:id="@+id/copyright"
        style="@style/ClassicTextSecondary"
        android:layout_gravity="center"
        android:text="@string/login_copyright_en" />

</LinearLayout>