<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ClassicLinearV">

    <com.bsoft.mob.ienr.view.BsoftActionBar
        android:id="@+id/actionbar"
        style="@style/ClassicActionBar" />

    <LinearLayout
        android:id="@+id/id_ll_controller"
        style="@style/ClassicLinearControlBarPrimary">

        <LinearLayout
            android:id="@+id/slt_stime_ly"
            style="@style/WrapWrap.Vertical">

            <TextView
                style="@style/ClassicTextSecondaryColored"
                android:text="@string/ann_time_title" />

            <TextView
                android:id="@+id/ann_time_txt"
                style="@style/ClassicTextSecondary" />
        </LinearLayout>


        <LinearLayout style="@style/AutoWrap.Horizontal">

            <TextView
                style="@style/ClassicTextSecondary"
                android:text="@string/ann_objs_title" />


            <com.bsoft.mob.ienr.view.expand.SpinnerLayout
                android:id="@+id/id_spinner_layout"
                style="@style/ClassicSpinner.AutoWrap" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/classicDivider"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/id_lv"
            tools:listitem="@layout/item_list_text_one_primary"
            style="@style/ClassicListView.AutoMatch"
             />

        <ListView
            android:id="@+id/id_lv_2"
            style="@style/ClassicListView"
            tools:listitem="@android:layout/simple_list_item_multiple_choice"
            android:layout_width="0dp"
            android:layout_weight="2" />
    </LinearLayout>


    <FrameLayout style="@style/ClassicFrame">

        <LinearLayout style="@style/ClassicLinearV.MatchWrap">

            <TextView
                style="@style/ClassicTextSecondary"
                android:text="@string/ann_did_project" />

            <ListView
                android:id="@+id/id_lv_3"
                style="@style/ClassicListView" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>